--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_phosphor_icons: ^0.0.1+5
   google_fonts: ^2.1.0
+  assorted_layout_widgets: ^5.2.1
 
 dev_dependencies:
   flutter_test:
